--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Listviewer development</title>
   </head>
   <body>
     <list-view
-      url="https://global-power-plants.datasettes.com/global-power-plants/global-power-plants.json"
+      uxrl="https://covid-19.datasettes.com/covid/ny_times_us_counties.json?_size=1000&county=Greene"
     ></list-view>
     <div id="app"></div>
     <script type="module" src="/src/main2.tsx"></script>
