--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <list-view
-      uxrl="https://covid-19.datasettes.com/covid/ny_times_us_counties.json?_size=1000&county=Greene"
+      kurl="https://covid-19.datasettes.com/covid/ny_times_us_counties.json?_size=1000&county=Greene"
     ></list-view>
     <div id="app"></div>
     <script type="module" src="/src/main2.tsx"></script>
